--- a/style.css
+++ b/style.css
@@ -16,3 +16,57 @@ body{
     /*background-image: url(images/logo.png);*/
     /* background-color: #311621; */
 }
+.container{
+    padding: 10px 10%;
+}
+    
+.logo{
+    width: 240px;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+nav ul li{
+    display: inline-block; 
+    list-style: none;
+    margin: 10px 20px;
+}
+nav ul li a{
+    color: #EC297B;
+    text-decoration: none;
+    font-size: 30px;
+    position: relative;
+}
+nav ul li a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #E0AAFF;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+nav ul li a:hover::after{
+    width: 100%;
+}
+.header-text{
+    right: 0;
+    margin-top: 20%;
+    font-size: 30px;
+}
+.header-text h1 {
+    font-size: 60px;
+    margin-top: 20px;
+}
+.header-text p span {
+    color: #EC297B;
+}
+.header-text h1 span {
+    color: #EC297B;
+}
