--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav ul li a:hover::after{
 .header-text h1 span {
     color: #EC297B;
 }
-*-------------About------------*/
+/*-------------About------------*/
 #about{
     padding: 80px 0;
     color: white;
