--- a/style.css
+++ b/style.css
@@ -25,22 +25,34 @@ body{
 }
 
 nav{
+    background-color: white;
+    height: 5%;
+    position: sticky;
+    top: 0;
+    transition: background-color 0.5s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
+header.scrolled {
+    background-color: white;
+    opacity: 0.98;
+}
 nav ul li{
     display: inline-block; 
     list-style: none;
     margin: 10px 20px;
 }
 nav ul li a{
+    transition: color 0.5s ease-in-out;
     color: #EC297B;
     text-decoration: none;
     font-size: 30px;
     position: relative;
+}
+header.scrolled ul li a{
+    color: white;
 }
 nav ul li a::after{
     content: '';
