--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     box-sizing: border-box;
 }
 body{
@@ -13,8 +13,6 @@ body{
     height: 100vh;
     background-size: cover;
     background-position: center;
-    /*background-image: url(images/logo.png);*/
-    /* background-color: #311621; */
 }
 .container{
     padding: 10px 10%;
@@ -73,6 +71,7 @@ nav ul li a:hover::after{
     font-size: 30px;
 }
 .header-text h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 60px;
     margin-top: 20px;
 }
