--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     height: 100vh;
     background-size: cover;
     background-position: center;
+    background-image: url(images/);
 }
 .container{
     padding: 10px 10%;
