--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: white;
     color: black;
@@ -13,7 +16,7 @@ body{
     height: 100vh;
     background-size: cover;
     background-position: center;
-    background-image: url(images/);
+  /*  background-image: url(images/background2.jpg); */
 }
 .container{
     padding: 10px 10%;
@@ -24,35 +27,30 @@ body{
 }
 
 nav{
-    background-color: white;
-    height: 5%;
-    position: sticky;
-    top: 0;
-    transition: background-color 0.5s ease-in-out;
     display: flex;
+    width: 100%;
+    z-index: 2;
     align-items: center;
     justify-content: space-between;
+    left: 0;
+    background: white;
     flex-wrap: wrap;
+    position: fixed;
+    top: 0;
 }
-header.scrolled {
-    background-color: white;
-    opacity: 0.98;
-}
+
 nav ul li{
     display: inline-block; 
     list-style: none;
     margin: 10px 20px;
 }
 nav ul li a{
-    transition: color 0.5s ease-in-out;
     color: #EC297B;
     text-decoration: none;
     font-size: 30px;
     position: relative;
 }
-header.scrolled ul li a{
-    color: white;
-}
+
 nav ul li a::after{
     content: '';
     width: 0;
@@ -72,7 +70,6 @@ nav ul li a:hover::after{
     font-size: 30px;
 }
 .header-text h1 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 60px;
     margin-top: 20px;
 }
@@ -101,6 +98,7 @@ border-radius: 15px;
 }
 .about-col-2{
     flex-basis: 60%;
+    font-size: 25px;
 }
 .sub-title {
     font-size: 60px;
