--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ nav ul li a:hover::after{
 /*-------------About------------*/
 #about{
     padding: 80px 0;
-    color: white;
+    color: black;
 } 
 .row {
 display: flex;
