--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ border-radius: 15px;
   }
 /*-----------------Portfolio------------------*/
 #portfolio{
-    padding: 50px 0;  
+    padding: 5% 0;  
   }
   .work-list{
       display: grid;
@@ -219,13 +219,6 @@ border-radius: 15px;
   .layer{
       width: 100%;
       height: 0;
-      background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
-      border-radius: 10px;
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      overflow: hidden;
-      display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
@@ -233,6 +226,14 @@ border-radius: 15px;
       text-align: center; 
       font-size: 14px;
       transition: height 0.5s;
+      background: linear-gradient(rgba(226, 101, 226, 0.685), #df7495);
+      border-radius: 10px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      overflow: hidden;
+      display: flex;
+     
   }
   .layer h3{
       font-weight: 500;
@@ -244,7 +245,7 @@ border-radius: 15px;
       text-decoration: none;
       font-size: 18px;
       line-height: 60px;
-      background: #fff;
+      background: #E0AAFF;
       width: 60px;
       height: 60px;
       border-radius: 50%;
@@ -274,3 +275,7 @@ border-radius: 15px;
   
       /* transition: background 0.5s; */
   }
+  .btn:hover{
+    transform: translateY(-10px);
+    background: #ff004f
+}
