--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav ul li{
 nav ul li a{
     color: #EC297B;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 20px;
     position: relative;
 }
 
@@ -353,9 +353,77 @@ form .btn2{
 }
 .copyright{
     width: 100%;
-   /* text-align: center; */
+   text-align: center;
     padding: 25px 0;
     background: rgb(255, 255, 255);
     font-weight: 300;
     margin-top: 20px;
+}
+/*---------------- css for small screens-------------------*/
+
+nav .fa-solid{
+    display: none;
+}
+
+@media only screen and (max-width: 600px){
+
+   .header-text{
+    margin-top: 100%;
+    font-size: 16px;
+   }
+    .header-text h1{
+        font-size: 30px;
+    }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 15px;
+        margin-right: 20px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 14px;
+    }
+}
+#msg{
+    color: rgb(215, 246, 250);
+    margin-top: -40px;
+    display: block;
 }
