--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ body{
     height: 100vh;
     background-size: cover;
     background-position: center;
-    /*background-image: url(images/background2.jpg);*/
-    /*background-color: #311621; */
+    background-image: url(images/tree.webp);
 }
 .container{
     padding: 10px 10%;
@@ -239,6 +238,9 @@ border-radius: 15px;
     font-weight: 500;
     margin-bottom: 20px;
 }
+.layer p{
+    font-size: 25px;
+}
 .layer a{
     margin-top: 20px;
     color: #ff004f;
@@ -339,6 +341,7 @@ form .btn2{
 }
 footer {
     position: relative;
+    margin-top: auto;
     width: 100%;
     background: #ff004f;
     min-height: 100px;
