--- a/style.css
+++ b/style.css
@@ -456,9 +456,9 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
 
-    /*#header{
-        background-image: url(images/logo.png);
-    }*/
+    #header{
+        background-image: url(images/tree.webp);
+    }
    .header-text{
     margin-top: 100%;
     font-size: 16px;
