--- a/style.css
+++ b/style.css
@@ -197,6 +197,24 @@ border-radius: 15px;
 .skill-card a:hover {
     text-decoration: underline;
 }
+.view-transcript {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.view-transcript .btn {
+    background-color: #007BFF;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s;
+}
+
+.view-transcript .btn:hover {
+    background-color: #0056b3;
+}
 
 /*-----------------projects------------------*/
 #projects{
