--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ border-radius: 15px;
 
 #skills .sub-title {
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
     font-weight: bold;
     margin-bottom: 30px;
 }
@@ -220,6 +220,11 @@ border-radius: 15px;
 #projects{
   padding: 5% 0;
 }
+#projects .sub-title {
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 30px;}
 .work-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
