--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body{
     height: 100vh;
     background-size: cover;
     background-position: center;
-    background-image: url(images/tree.webp);
+    /*background-image: url(images/tree.webp);*/
 }
 .container{
     padding: 10px 10%;
